# carving-manim

./: .gitignore  README.md  carve_85_percent_pregen.py  concat_manim_scenes.py  edge_on_memory.py  edge_on_memory_pregen2.py  failure_pregen.py  manim.cfg  purple_seam_pregen.py  pyproject.toml  requirements.txt
pregen/: energy_on_memory_pregen.py
src/seamcarving_manim/: style.py
src/seamcarving_manim/assets/images/memory_edges/: gx_small.npy  gy_small.npy  mag_small.npy  small_gray.npy
src/seamcarving_manim/assets/images/memory_edges_fast/: gray.npy  gx.npy  gx_norm.npy  gy.npy  gy_norm.npy  mag.npy  mag_norm.npy  vec_dx.npy  vec_dy.npy  vec_x.npy  vec_y.npy
src/seamcarving_manim/scenes/: s00_title.py  s05_manim_intro.py  s10_problem_and_baselines.py  s15_intro_demo.py  s17_sobel_intro.py  s20_energy_map.py  s25_edge_on_memory.py  s27_edge_on_memory_v2.py  s30_dp_fill_and_backtrack.py  s30_dynamic_programming.py  s35_min_energy_memory.py  s40_purple_seam_demo.py  s40_seam_removal_demo.py  s45_failure_modes.py  s50_final_scene.py  style.py
src/seamcarving_manim/utils/: seam_carving_core.py
